--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
         <div class="aboutme">
             <p>
-                Hello, I'm Himanshu Patel, I am an aspiring Mern Stack Developer with a strong interest in
+                Hello, <b>I'm Himanshu Patel,</b> I am an aspiring Mern Stack Developer with a strong interest in
                 building modern, scalable web applications. I have been developing my skills in both frontend and
                 backend technologies, with a focus on creating complete end-to-end solutions. I enjoy turning ideas into
                 working products and continuously improving my technical knowledge through hands-on practice and real
@@ -103,27 +103,27 @@
         </div>
         <div class="skill-icons">
 
-            <img src="/image/html-5.png" alt="">
+            <img src="/image/mongodb.jpg" alt="">
         </div>
         <div class="skill-icons">
 
-            <img src="/image/html-5.png" alt="">
+            <img src="/image/express-js.png" alt="">
         </div>
         <div class="skill-icons">
 
-            <img src="/image/html-5.png" alt="">
+            <img src="/Image/react-js.png" alt="">
         </div>
         <div class="skill-icons">
 
-            <img src="/image/html-5.png" alt="">
+            <img src="/image/node-js.png" alt="">
         </div>
         <div class="skill-icons">
 
-            <img src="/image/html-5.png" alt="">
+            <img src="/image/github.png" alt="">
         </div>
         <div class="skill-icons">
 
-            <img src="" alt="">
+            <img src="/Image/jquery.png" alt="">
         </div>
 
     </div>
