--- a/index.html
+++ b/index.html
@@ -91,23 +91,23 @@
     </div>
     <div class="skill-outer">
         <div class="skill-icons">
-            <img src="/image/html icon.jpg" alt="">
+            <img src="/Image/html icon.jpg" alt="">
         </div>
         <div class="skill-icons">
 
-            <img src="/image/CSS-icon.png" alt="">
+            <img src="/Image/CSS-icon.png" alt="">
         </div>
         <div class="skill-icons">
 
-            <img src="/image/JavaScript.jpg" alt="">
+            <img src="/Image/JavaScript.jpg" alt="">
         </div>
         <div class="skill-icons">
 
-            <img src="/image/mongodb.jpg" alt="">
+            <img src="/Image/mongodb.jpg" alt="">
         </div>
         <div class="skill-icons">
 
-            <img src="/image/express-js.png" alt="">
+            <img src="/Image/express-js.png" alt="">
         </div>
         <div class="skill-icons">
 
@@ -115,11 +115,11 @@
         </div>
         <div class="skill-icons">
 
-            <img src="/image/node-js.png" alt="">
+            <img src="/Image/node-js.png" alt="">
         </div>
         <div class="skill-icons">
 
-            <img src="/image/github.png" alt="">
+            <img src="/Image/github.png" alt="">
         </div>
         <div class="skill-icons">
 
