--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <nav>
         <div class="logo">
-            <img src="/image/logo new.jpeg" alt="himanshu_logo">
+            <img src="/Image/logo new.jpeg" alt="himanshu_logo">
         </div>
         <div class="menu">
             <ul>
@@ -36,7 +36,7 @@
 
     <div id="hero">
         <div class="left">
-            <img src="/image/IMG_20220728_181326_694.jpg" alt="">
+            <img src="/Image/IMG_20220728_181326_694.jpg" alt="">
         </div>
         <div class="right">
             <div class="info">
@@ -157,9 +157,9 @@
         <h2>Latest Poject</h2>
         <hr>
         <div class="img">
-            <img src="/image/spotify clone.jpeg" alt="">
-            <img src="/image/gym..jpeg" alt="">
-            <img src="/image/portfolio.jpeg" alt="">
+            <img src="/Image/spotify clone.jpeg" alt="">
+            <img src="/Image/gym..jpeg" alt="">
+            <img src="/Image/portfolio.jpeg" alt="">
         </div>
     </div>
 
