--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         </div>
         <div class="skill-icons">
 
-            <img src="/Image/github.png" alt="">
+            <img src="/Image/github1.jpg" alt="">
         </div>
         <div class="skill-icons">
 
