--- a/index.html
+++ b/index.html
@@ -206,27 +206,29 @@
 
     <footer>
         <div class="footer-item">
-
+         <p>Made with by❤️ Portfolio Admin © 2026 All rights reserved</p>
+         <p>Designed By Himanshu Patel</p>
         </div>
     </footer>
-
-
-
-
-
     <!--Start of Tawk.to Script-->
     <script type="text/javascript">
-        var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
-        (function () {
-            var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
-            s1.async = true;
-            s1.src = 'https://embed.tawk.to/6990699a4555c51c34097541/1jhe1p1ek';
-            s1.charset = 'UTF-8';
-            s1.setAttribute('crossorigin', '*');
-            s0.parentNode.insertBefore(s1, s0);
-        })();
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    (function(){
+    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+    s1.async=true;
+    s1.src='https://embed.tawk.to/69959d307418241c38dd9325/1jho6s2f4';
+    s1.charset='UTF-8';
+    s1.setAttribute('crossorigin','*');
+    s0.parentNode.insertBefore(s1,s0);
+    })();
     </script>
     <!--End of Tawk.to Script-->
+
+
+
+
+
+   
 </body>
 
 </html>
